2017-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Require that XV 332 format have 256
	colors.  Fixes SourceForge issue #465 "NULL Pointer Dereference
	triggered by malformed file".  In our own testing the test case
	produced an assertion failure because assertions were enabled.

	* magick/colormap.c (AllocateImageColormap): Use unsigned array
	index.

2017-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Fix CVE-2016-10070, which is a heap
	overflow in the MAT reader due to an under-sized memory
	allocation.  Based on private email from Petr Gajdos on Mon, 11
	Sep 2017.

2017-09-13  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Check MemoryResource before allocating
	ping_pixel array.

2017-09-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/shear.c: Possible evil loop might waste CPU for long time
        without any reason.

2017-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix SourceForge issue #448 "Heap
	out of bounds read in DrawDashPolygon()".  Problem was reported by
	Kamil Frankowicz on August 28, 2017.

	* coders/uil.c (WriteUILImage): Fix crash in UIL writer when
	writing image containing transparency.  Issue was reported by
	LCatro via email on 18 Jul 2017.

	* coders/wpg.c (InsertRow): Fix crash which occurs if image is not
	PseudoClass but a PseudoColor scanline is needed.  Resolves
	SourceForge issue #449 "Null pointer dereference in InsertRow()".

	* coders/rle.c (ReadRLEImage): Impose image dimension limits
	according to Utah RLE specification. Cap number of planes handled
	internally at 4.  Remove non-standard multi-frame extension, which
	did not work anyway.

2017-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Complete fixing CVE-2017-8350 crash
	while reading a malformed JNG file.

	* coders/{html.c, map.c, plasma.c, png.c, psd.c, rle.c, stegano.c,